@@ -61,7 +61,7 @@ void Palette::load(const char *fname, int index, const char *xfname, int xindex)
 	{
 	size_t len;
 	char *buf = 0;
-	if (strncmp(fname, STATICDAT, sizeof(STATICDAT) - 1) == 0 &&
+	if (std::strncmp(fname, STATICDAT, sizeof(STATICDAT) - 1) == 0 &&
 					is_system_path_defined("<PATCH>"))
 		{			// Check in "patch" dir. first.
 		string pname(PATCHDAT);
